# boinc-magphys

./: .gitignore  .project  .pydevproject  LICENSE.markdown  README.markdown  Rakefile  compile_windows_client.txt  compile_wrapper.txt  meep  setup_boinc_server_01.sh
Debug/: makefile  sources.mk
Debug/boinc-api/: subdir.mk
Debug/boinc-clientgui/: subdir.mk
Debug/boinc-db/: subdir.mk
Debug/boinc-lib/: subdir.mk
Debug/boincched/: subdir.mk
aws-client/src/: __init__.py  start_aws_boinc_clients.py
client/aws_client/: user_data.sh
client/config/: job.xml
client/gpu/: CommandLine.cpp  CommandLine.hpp  Constants.hpp  Fit.cpp  Fit.hpp  HistogramRange.cpp  HistogramRange.hpp  Main.cpp  Makefile  ModelData.cpp  ModelData.hpp  Observation.cpp  Observation.hpp  Parser.cpp  Parser.hpp  a.out
client/py_src/: build_convertLnu_test.py  build_infrared_test.py  build_optical_test.py  calc_distance.py
client/src/magphys_c/code/: CMakeLists.txt  README.markdown  uncrustify.cfg
client/src/magphys_c/code/cmake/Modules/: boost.cmake  gmock.cmake
client/src/magphys_c/code/src/: CMakeLists.txt  CommandLine.cpp  CommandLine.hpp  Constants.hpp  Fit.cpp  Fit.hpp  Main.cpp  ModelData.cpp  ModelData.hpp  fit_sed_skynet.cpp  fit_sed_skynet.f
client/src/magphys_c/code/src/unit_test/: CMakeLists.txt  test_CommandLine.cpp  test_ConvertToLnu.cpp  test_Fit.cpp  test_Main.cpp  test_ModelData.cpp  test_ModelDataLoad.cpp  test_STR.cpp  test_STR.hpp
config/: README.markdown  job.xml  project.xml  setup.txt  version.xml
config/templates/: fitsed_result  fitsed_wu
galaxy-registration/: 2012-10-04-GalaxyDetails.txt  2012-10-11-GalaxyDetails.txt  2012-11-02-GalaxyDetails.txt  2012-11-22-GalaxyDetails.txt  2013-07-22-GalaxyDetails.txt  2013-08-16-GalaxyDetails.txt  2013-10-03-GalaxyDetails.txt  2013-10-17-GalaxyDetails.txt  2013-11-20-GalaxyDetails.txt  2013-11-21-GalaxyDetails.txt  2013-12-12-GalaxyDetails.txt  2014-01-21-GalaxyDetails.txt  2014-01-23-GalaxyDetails.txt  2014-02-10-GalaxyDetails.txt  2014-02-14a-GalaxyDetails.txt  2014-03-04a-GalaxyDetails.txt  GalaxyDetails.xlsx  GalaxyDetails02.xlsx  GalaxyDetails2013-01.xlsx  GalaxyDetails2013-02.xlsx  GalaxyDetails2014-01.xlsx  GalaxyDetails2014-Q01.xlsx  GalaxyDetails2014-Q02.xlsx  GalaxyDetails2014-Q03.xlsx  GalaxyDetails2014-Q04.xlsx  GalaxyDetails2015-Q01.xlsx  HL_d251to2arcmin_incllt60_tableinfo.txt  LAPsec_objnameadzextdeg.txt  NEDgalPV2_140..150d_-30..80d_1..3arcmin_nameadzt.txt  NEDgalPV2_150..160d_-30..80d_1..3arcmin_nameadzt.txt  NEDgalPV2_180..190d_-30..80d_1..3arcmin_nameadzt.txt  NEDgalPV2_190..200d_-30..80d_1..3arcmin_nameadzt.txt  NEDgalPV2_20..30d_-30..80d_1..3arcmin_nameadzt.txt  NEDgalPV2_240..250d_-30..80d_1..3arcmin_nameadzt.txt  NEDgalPV2_30..40d_-30..80d_1..3arcmin_nameadzt.txt  NEDgalPV2_40..50d_-30..80d_1..3arcmin_nameadzt.txt  NEDgalPV2_50..60d_-30..80d_1..3arcmin_nameadzt.txt  NEDgalPV2_60..70d_-30..80d_1..3arcmin_nameadzt.txt  NEDgalPV2_80..90d_-30..80d_1..3arcmin_nameadzt.txt  NEDgalPV2_90..100d_-30..80d_1..3arcmin_nameadzt.txt  (+1 more)
galaxy-registration/2012/: 2012-10-02-GalaxyDetails-0.05.txt  2012-10-04-GalaxyDetails.txt  2012-10-22-GalaxyDetails.txt  2012-11-02-GalaxyDetails.txt  2012-11-27-GalaxyDetails.txt  2012-12-18-GalaxyDetails.txt
galaxy-registration/2013/: 2013-02-25-GalaxyDetails.txt  2013-07-22-GalaxyDetails.txt  2013-08-13-GalaxyDetails.txt  2013-08-16-GalaxyDetails.txt  2013-08-23-GalaxyDetails.txt  2013-09-09-GalaxyDetails.txt  2013-09-16-GalaxyDetails.txt  2013-11-07-GalaxyDetails.txt  2013-11-14-GalaxyDetails.txt  2013-11-18-GalaxyDetails.txt  2013-12-23a-GalaxyDetails.txt  2013-12-23b-GalaxyDetails.txt
galaxy-registration/2014/: 2014-01-21-GalaxyDetails.txt  2014-02-01-GalaxyDetails.txt  2014-02-03-GalaxyDetails.txt  2014-02-10b-GalaxyDetails.txt  2014-02-13-GalaxyDetails.txt  2014-02-14-GalaxyDetails.txt  (+40 more)
machine-setup/: README.markdown  Rakefile  amazon_linux_boinc_server_install_01.sh  amazon_linux_boinc_server_install_02.sh  boinc-magphys.pp  common_server_install.sh  create_instance.py  create_multiple_instances.py  create_single_instance.py  fabfile-test.py  fabfile.py  file_editor.py  file_editor_single.py  single_instance_install.sh  utils.py  variables.sh
post-processing/: README.markdown
restful/: README.markdown
server/: Rakefile
src/: fit_sample  fit_sed.f  get_infrared_colors.f  make_zgrid.f  read_irlib_bin.f
testing/: note.txt
(+535 files in other folders)
